@@ -1,4 +1,5 @@
 3.0
+- Relations now use frozenset internally and are immutable
 - Refactored parser to use better typing
 - Refactored and fixed some optimizations
 - Added more test cases
